import path from 'node:path'
import { fileURLToPath } from 'node:url'
import { rolldownBuild } from '@sxzz/test-utils'
import { describe, expect, test } from 'vitest'
import { dts } from '../src/index.ts'
import { getTsgoPathFromNodeModules } from '../src/tsgo.ts'

const dirname = path.dirname(fileURLToPath(import.meta.url))

test('basic', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/basic.ts'),
    [dts()],
  )
  expect(snapshot).toMatchSnapshot()
})

test('tsx', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/tsx.tsx'),
    [dts()],
  )
  expect(snapshot).toMatchSnapshot()
})

test('resolve dependencies', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/resolve-dep.ts'),
    [
      dts({
        oxc: true,
        emitDtsOnly: true,
      }),
    ],
    { external: ['rolldown'] },
  )
  expect(snapshot).contain('type TsConfigResult')
  expect(snapshot).not.contain('node_modules/rolldown')
})

test('resolve dts', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/resolve-dts/index.ts'),
    [dts()],
  )
  expect(snapshot).matchSnapshot()
})

// Test alias mapping based on rolldown input option
test('input alias', async () => {
  const root = path.resolve(dirname, 'fixtures/alias')
  const { snapshot, chunks } = await rolldownBuild(
    // A mapping from output chunk names to input files. This mapping should
    // be used in both JS and DTS outputs.
    {
      output1: 'input1.ts',
      'output2/index': 'input2.ts',
    },
    [dts({ emitDtsOnly: false })],
    { cwd: root },
  )
  const fileNames = chunks.map((chunk) => chunk.fileName).toSorted()

  // The JS output and DTS output should have the same structure
  expect(fileNames).toContain('output1.d.ts')
  expect(fileNames).toContain('output1.js')
  expect(fileNames).toContain('output2/index.d.ts')
  expect(fileNames).toContain('output2/index.js')

  expect(snapshot).toMatchSnapshot()
})

test('isolated declaration error', async () => {
  const error = await rolldownBuild(
    path.resolve(dirname, 'fixtures/isolated-decl-error.ts'),
    [
      dts({
        emitDtsOnly: true,
        oxc: true,
      }),
    ],
  ).catch((error: any) => error)
  expect(String(error)).toContain(
    `Function must have an explicit return type annotation with --isolatedDeclarations.`,
  )
  expect(String(error)).toContain(`export function fn() {`)
})

test('tree-shaking', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/tree-shaking/index.ts'),
    [
      dts(),
      {
        name: 'external-node',
        resolveId(id) {
          if (id.startsWith('node:'))
            return { id, external: true, moduleSideEffects: false }
        },
      },
    ],
    { treeshake: true },
  )
  expect(snapshot).matchSnapshot()
})

describe('dts input', () => {
  test('input array', async () => {
    const { snapshot, chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/dts-input.d.ts')],
      [dts({ dtsInput: true })],
      {},
    )
    expect(chunks[0].fileName).toBe('dts-input.d.ts')
    expect(snapshot).toMatchSnapshot()
  })

  test('input object', async () => {
    const { snapshot, chunks } = await rolldownBuild(
      { index: path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
    )
    expect(chunks[0].fileName).toBe('index.d.ts')
    expect(snapshot).toMatchSnapshot()
  })

  test('.d in chunk name', async () => {
    const { chunks } = await rolldownBuild(
      { 'index.d': path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
    )
    expect(chunks[0].fileName).toBe('index.d.ts')
  })

  test('full extension in chunk name', async () => {
    const { chunks } = await rolldownBuild(
      { 'index.d.mts': path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
    )
    expect(chunks[0].fileName).toBe('index.d.mts')
  })

  test('custom entryFileNames with .d', async () => {
    const { chunks } = await rolldownBuild(
      { index: path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
      {},
      {
        entryFileNames: '[name].d.cts',
      },
    )
    expect(chunks[0].fileName).toBe('index.d.cts')
  })

  test('custom entryFileNames without .d', async () => {
    const { chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/dts-input.d.ts')],
      [dts({ dtsInput: true })],
      {},
      { entryFileNames: '[name].mts' },
    )
    expect(chunks[0].fileName).toBe('dts-input.d.mts')
  })

  test('custom entryFileNames function', async () => {
    const { chunks } = await rolldownBuild(
      { index: path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
      {},
      {
        entryFileNames: () => '[name].mts',
      },
    )
    expect(chunks[0].fileName).toBe('index.d.mts')
  })

  test('invalid entryFileNames gets overridden with stripped .d', async () => {
    const { chunks } = await rolldownBuild(
      { 'index.d': path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
      {},
      { entryFileNames: '[name].invalid' },
    )
    expect(chunks[0].fileName).toBe('index.d.ts')
  })

  test('invalid entryFileNames gets overridden and preserves subextension', async () => {
    const { chunks } = await rolldownBuild(
      { 'index.asdf': path.resolve(dirname, 'fixtures/dts-input.d.ts') },
      [dts({ dtsInput: true })],
      {},
      { entryFileNames: '[name].invalid' },
    )
    expect(chunks[0].fileName).toBe('index.asdf.d.ts')
  })

  test('default chunk name', async () => {
    const { snapshot, chunks } = await rolldownBuild(
      [
        path.resolve(dirname, 'fixtures/dts-multi-input/input1.d.ts'),
        path.resolve(dirname, 'fixtures/dts-multi-input/input2.d.ts'),
      ],
      [dts({ dtsInput: true })],
      {},
      {
        entryFileNames: '[name].mts',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toMatchInlineSnapshot(`
      [
        "input1.d.mts",
        "input2.d.mts",
        "types-B0jSiKC_.d.ts",
      ]
    `)

    expect(snapshot).toMatchSnapshot()
  })

  test('custom chunk name', async () => {
    const { snapshot, chunks } = await rolldownBuild(
      [
        path.resolve(dirname, 'fixtures/dts-multi-input/input1.d.ts'),
        path.resolve(dirname, 'fixtures/dts-multi-input/input2.d.ts'),
      ],
      [dts({ dtsInput: true })],
      {},
      {
        chunkFileNames: 'chunks/[hash]-[name].ts',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toMatchInlineSnapshot(`
      [
        "chunks/BCXvBysl-types.d.ts",
        "input1.d.ts",
        "input2.d.ts",
      ]
    `)

    expect(snapshot).toMatchSnapshot()
  })
})

describe('entryFileNames', () => {
  test('.mjs -> .d.mts', async () => {
    const { chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/basic.ts')],
      [dts()],
      {},
      {
        entryFileNames: '[name].mjs',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toStrictEqual(['basic.d.mts', 'basic.mjs'])
  })

  test('.cjs -> .d.cts', async () => {
    const { chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/basic.ts')],
      [dts()],
      {},
      {
        entryFileNames: '[name].cjs',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toStrictEqual(['basic.cjs', 'basic.d.cts'])
  })

  test('.mjs -> .d.mts with custom chunk name', async () => {
    const { chunks } = await rolldownBuild(
      { custom: path.resolve(dirname, 'fixtures/basic.ts') },
      [dts()],
      {},
      { entryFileNames: '[name].mjs' },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toStrictEqual(['custom.d.mts', 'custom.mjs'])
  })

  test('preserves invalid extension', async () => {
    const { chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/basic.ts')],
      [dts()],
      {},
      {
        entryFileNames: '[name].invalid',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toStrictEqual(['basic.d.invalid', 'basic.invalid'])
  })

  test('same-name output (for JS & DTS)', async () => {
    const { chunks } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/same-name/index.ts')],
      [dts()],
      {},
      {
        preserveModules: true,
        entryFileNames: 'foo.d.ts',
      },
    )

    expect(chunks.every((chunk) => chunk.fileName.endsWith('.d.ts'))).toBe(true)
  })

  test('default chunk name', async () => {
    const { chunks, snapshot } = await rolldownBuild(
      [
        path.resolve(dirname, 'fixtures/alias/input1.ts'),
        path.resolve(dirname, 'fixtures/alias/input2.ts'),
      ],
      [dts({ emitDtsOnly: true })],
      {},
      {
        entryFileNames: '[name].mjs',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toMatchInlineSnapshot(`
      [
        "input1.d.mts",
        "input2-459dIHr0.d.ts",
        "input2.d.mts",
      ]
    `)

    expect(snapshot).toMatchSnapshot()
  })

  test('custom chunk name', async () => {
    const { snapshot, chunks } = await rolldownBuild(
      [
        path.resolve(dirname, 'fixtures/dts-multi-input/input1.d.ts'),
        path.resolve(dirname, 'fixtures/dts-multi-input/input2.d.ts'),
      ],
      [dts({ emitDtsOnly: true })],
      {},
      {
        chunkFileNames: 'chunks/[hash]-[name].js',
      },
    )

    const chunkNames = chunks.map((chunk) => chunk.fileName).toSorted()
    expect(chunkNames).toMatchInlineSnapshot(`
      [
        "chunks/BCXvBysl-types.d.ts",
        "input1.d.ts",
        "input2.d.ts",
      ]
    `)

    expect(snapshot).toMatchSnapshot()
  })
})

test('type-only export', async () => {
  const { snapshot } = await rolldownBuild(
    [path.resolve(dirname, 'fixtures/type-only-export/index.ts')],
    [dts({ emitDtsOnly: true })],
  )
  expect(snapshot).toMatchSnapshot()
})

test('cjs exports', async () => {
  {
    const { snapshot } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/cjs-exports.ts')],
      [],
      {},
      { format: 'cjs', exports: 'auto' },
    )
    expect(snapshot).toMatchSnapshot()
  }

  {
    const { snapshot } = await rolldownBuild(
      [path.resolve(dirname, 'fixtures/cjs-exports.ts')],
      [dts({ emitDtsOnly: true, cjsDefault: true })],
    )
    expect(snapshot).toMatchSnapshot()
  }
})

test('declare module', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/declare-module.ts'),
    [
      dts({
        emitDtsOnly: true,
      }),
    ],
    { platform: 'node' },
  )
  expect(snapshot).toMatchSnapshot()
})

test('should error when file import cannot be found', async () => {
  await expect(() =>
    rolldownBuild(path.resolve(dirname, 'fixtures/unresolved-import/ts.ts'), [
      dts({
        emitDtsOnly: true,
      }),
    ]),
  ).rejects.toThrow("Could not resolve './missing-file'")
})

test('manualChunks', async () => {
  const { snapshot, chunks } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/manual-chunk/entry.ts'),
    [dts({ emitDtsOnly: true })],
    {},
    {
      manualChunks(id) {
        if (id.includes('shared1')) return 'shared1-chunk.d'
      },
    },
  )
  expect(snapshot).toMatchSnapshot()
  expect(chunks).toHaveLength(2)
})

test('codeSplitting', async () => {
  const { snapshot, chunks } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/manual-chunk/entry.ts'),
    [dts({ emitDtsOnly: true })],
    {},
    {
      codeSplitting: {
        groups: [{ test: /shared1/, name: 'shared1-chunk.d' }],
      },
    },
  )
  expect(snapshot).toMatchSnapshot()
  expect(chunks).toHaveLength(2)
})

test('re-export from lib', async () => {
  const cwd = path.resolve(dirname, 'fixtures/re-export-lib')
  const { snapshot: onlyA } = await rolldownBuild(
    ['a.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  const { snapshot: onlyB } = await rolldownBuild(
    ['b.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  const { snapshot: both } = await rolldownBuild(
    ['a.ts', 'b.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  expect(onlyA).toMatchSnapshot('onlyA')
  expect(onlyB).toMatchSnapshot('onlyB')
  expect(both).toMatchSnapshot('both')
})

test('cyclic import', async () => {
  const cwd = path.resolve(dirname, 'fixtures/cyclic-import')
  const { snapshot } = await rolldownBuild(
    ['a.ts', 'b.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  expect(snapshot).toMatchSnapshot()
})

test('side effects', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/side-effects/index.ts'),
    [
      dts({
        emitDtsOnly: true,
        sideEffects: true,
      }),
    ],
    {},
    { preserveModules: true },
  )
  expect(snapshot).toMatchSnapshot()
})

test('infer type parameter', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/infer-type-param.ts'),
    [dts({ emitDtsOnly: true })],
  )
  expect(snapshot).toMatchSnapshot()
  // Ensure type parameter U is not renamed to U$1
  expect(snapshot).toContain('Fn1<U = unknown>')
  expect(snapshot).not.toContain('U$1')
})

test('infer false branch', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/infer-false-branch/index.ts'),
    [dts({ emitDtsOnly: true })],
  )
  expect(snapshot).toMatchSnapshot()
  expect(snapshot).toContain(
    'T extends Array<infer U> ? (T extends Array<infer U2> ? U2 : U) : ',
  )
})

test('tsgo with custom path', async () => {
  const tsgoPath = await getTsgoPathFromNodeModules()
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/basic.ts'),
    [
      dts({
        tsgo: { path: tsgoPath },
        tsconfig: path.resolve(dirname, 'fixtures/basic.tsconfig.json'),
      }),
    ],
  )
  expect(snapshot).toMatchSnapshot()
})

// https://github.com/sxzz/rolldown-plugin-dts/issues/136
test('css.ts files', async () => {
  const root = path.resolve(dirname, 'fixtures/css-ts')
  const { snapshot } = await rolldownBuild(path.resolve(root, 'index.ts'), [
    dts({ emitDtsOnly: true }),
  ])
  expect(snapshot).toMatchSnapshot()
})

// https://github.com/rolldown/tsdown/issues/170
test('real css imports are externalized', async () => {
  const root = path.resolve(dirname, 'fixtures/css-real')
  const { snapshot } = await rolldownBuild(path.resolve(root, 'index.ts'), [
    dts({ emitDtsOnly: true }),
  ])
  expect(snapshot).toMatchSnapshot()
  expect(snapshot).not.toContain('.main')
})

test('sub namespace', async () => {
  const { snapshot } = await rolldownBuild(
    path.resolve(dirname, 'fixtures/sub-namespace.ts'),
    [dts({ emitDtsOnly: true })],
  )
  expect(snapshot).toMatchSnapshot()
})

// Test for export = namespace pattern like postgres
// When a dev dependency uses `export = namespace`, named imports should be
// transformed to use namespace-qualified access (e.g., `Sql` -> `postgres.Sql`)
test('export equals namespace', async () => {
  const cwd = path.resolve(dirname, 'fixtures/export-equals-namespace')
  const { snapshot } = await rolldownBuild(
    ['index.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  expect(snapshot).toMatchSnapshot()
  // Verify namespace-qualified references are used
  expect(snapshot).toContain('mockdb.Connection')
  expect(snapshot).toContain('mockdb.Row')
  expect(snapshot).toContain('mockdb.Options')
  expect(snapshot).toContain('mockdb.DatabaseError')
  expect(snapshot).toContain('mockdb.DriverType.Postgres')
  expect(snapshot).toContain('type DriverType = mockdb.DriverType')
})

test('export equals namespace with re-exports', async () => {
  const cwd = path.resolve(dirname, 'fixtures/export-equals-reexport')
  const { snapshot } = await rolldownBuild(
    ['index.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  expect(snapshot).toMatchSnapshot()
  expect(snapshot).toContain('type FrameworkLogFn')
  expect(snapshot).toContain('type LogLevel')
  expect(snapshot).toContain('type Bindings')
  expect(snapshot).toContain('logger.LogFn')
  expect(snapshot).toContain('logger.Level')
  expect(snapshot).toContain('logger.Bindings')
})

test('ambient declarations in node_modules', async () => {
  const cwd = path.resolve(dirname, 'fixtures/ambient-dts')
  const { snapshot } = await rolldownBuild(
    ['index.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd, treeshake: true },
  )
  expect(snapshot).toMatchSnapshot()
  expect(snapshot).toContain('interface AmbientConnection')
  expect(snapshot).toContain('interface AmbientConfig')
  expect(snapshot).toContain('declare class AmbientDatabase')
  expect(snapshot).not.toContain('UnusedInterface')
  expect(snapshot).not.toContain('UnusedType')
  expect(snapshot).not.toContain('unusedFunction')
  expect(snapshot).not.toContain('UnusedClass')
})

test('namespace re-exports types via direct exports', async () => {
  const cwd = path.resolve(dirname, 'fixtures/namespace-reexport-types')
  const { snapshot } = await rolldownBuild(
    ['index.ts'],
    [dts({ emitDtsOnly: true })],
    { cwd },
  )
  expect(snapshot).toMatchSnapshot()
  expect(snapshot).toContain('export { type SerializedError')
  expect(snapshot).toContain('type SerializedRequest')
  expect(snapshot).toContain('type SerializedResponse')
  expect(snapshot).toContain('interface SerializedError')
  expect(snapshot).toContain('interface SerializedRequest')
  expect(snapshot).toContain('interface SerializedResponse')
  expect(snapshot).toContain('stdSerializers: {')
  expect(snapshot).toContain('err: typeof err')
})
